--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/provider-upload-cloudinary": "^4.10.5",
     "@strapi/strapi": "4.10.5",
     "pg": "8.8.0",
+    "strapi-plugin-import-export-entries": "^1.19.2",
     "strapi-plugin-multi-select": "^1.1.0",
     "stripe": "^12.6.0"
   },
